subscription to host now works

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,7 @@ TODO list:
 
 
 TO FIX: 
--- subscribe/host not working yet
++ subscribe/host not working yet
 
 TO TEST:
 -- test connect messages
@@ -12,4 +12,4 @@ TO ADD:
 -- connections by hostname
  - keep a list of hostnames!
 
--- to add: /query/host/connections
+-- to add: /query/connections/host
